...
              "avatar_data_url": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAFklEQVR42mNUcLj0nwEPYGIgAIaHAgBE3AJBVcnK6gAAAABJRU5ErkJggg==",
              "built_in": true,
              "standalone": true
            },
            {
              "agent_id": "reviewer",
              "display_name": "Reviewer",
              "provider_type": "claude_code",
              "model": "sonnet",
              "default_workspace_dir": "/workspace/garyx",
              "avatar_data_url": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAFklEQVR42mOM8VjwnwEPYGIgAIaHAgBXtgJTMAef0wAAAABJRU5ErkJggg==",
              "built_in": false,
              "standalone": true
...
