...
        switch self {
        case .daily:
            "Every Day"
        case .weekdays:
            "Weekdays"
        case .weekly:
            "Every Week"
        case .monthly:
            "Every Month"
        case .once:
            "No Repeat"
        case .interval:
            "Every N Hours"
...
